--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Splitwise</title>
-        <link rel="icon" href="/images/logo.png">
+        <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVe7xHUBx5QqiQQXmYDtpQSA6miwUzdflB9zcJsoKCIQ&s">
         <link rel="stylesheet" href="style.css">
         <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
 
@@ -12,7 +12,7 @@
         </div>
         <div id="navbar">
             <div id="logo-heading">
-                <img src="/images/logo.png" alt="#" id="logo">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVe7xHUBx5QqiQQXmYDtpQSA6miwUzdflB9zcJsoKCIQ&s" alt="#" id="logo">
                 <h1 id="header">Splitwise</h1>
             </div>
            
